--- a/commentapp/templates/commentapp/create.html
+++ b/commentapp/templates/commentapp/create.html
@@ -11,7 +11,7 @@
       {% if user.is_authenticated %}
         <input type="submit" class="btn btn-dark rounded-pill col-6 mt-3">
       {% else %}
-      <a href="{% url 'accountappL:login' %}?next={{ request.path }}"
+      <a href="{% url 'accountapp:login' %}?next={{ request.path }}"
           class="btn btn-dark rounded-pill col-6 mt-3">
           Login
       </a>
