--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -2,18 +2,28 @@
 {% load static %}
 {% block content %}
 <style>
-   .container div {
-  width: 280px;
-  background-color: antiquewhite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 1rem;
-}
+
+  .container {
+    padding: 0;
+    margin: 0, auto;
+  }
+
+  .container a {
+   width: 45%;
+   max-width: 250px;
+  }
+  .container div {
+    background-color: antiquewhite;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+  }
   .container img{
-  width: 100%;
-  border-radius: 1rem;
-}
+    width: 100%;
+    border-radius: 1rem;
+  }
+
 </style>
   {% if article_list %}
   <div class="container">
@@ -34,7 +44,7 @@
   {% include 'snippets/pagination.html' with page_obj=page_obj %}
 
   <div style="text-align: center;">
-    <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
+    <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3 px-2">
       Create Article
     </a>
   </div>
