--- a/templates/head.html
+++ b/templates/head.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initialscale=1, shrink-to-fit=no">
     <title>Pragmatic</title>
 
     <!--  bootstrap link  -->
