--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <div class="pragmatic_header">
     <div>
-        <h1 class="pragmatic_logo">Progmatic</h1>
+        <h1 class="pragmatic_logo">Pragmatic</h1>
     </div>
     <div class="pragmatic_header_navbar">
         <a href="{% url 'articleapp:list' %}" class="pragmatic_header_nav">
@@ -17,6 +17,9 @@
             <span>SignUp</span>
         </a>
         {% else %}
+        <a href="{% url 'subscribeapp:list' %}" class="pragmatic_header_nav">
+            <span>Subscription</span>
+        </a>
         <a href="{% url 'accountapp:detail' pk=user.pk %}" class="pragmatic_header_nav">
             <span>MyPage</span>
         </a>
