--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -17,9 +17,9 @@
       <img style="width: 100%; border-radius: 1rem;"
               src="{{ target_article.image.url }}" alt="">
 
-      <p>
-        {{ target_article.context }}
-      </p>
+      <div class="text-start">
+        {{ target_article.context | safe }}
+      </div>
 
       {% if target_article.writer == user %}
       <a href="{% url 'articleapp:update' pk=target_article.pk %}"
