--- a/templates/head.html
+++ b/templates/head.html
@@ -14,6 +14,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 
+    <!-- google material icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet">
+
     <!--  default css link  -->
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
